--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@story-protocol/core-sdk": "^1.4.2",
     "@supabase/supabase-js": "^2.86.0",
-    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query": "^5.90.11",
+    "@tomo-inc/tomo-evm-kit": "^0.0.41",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -60,6 +62,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "viem": "^2.40.3",
+    "wagmi": "^3.0.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
