--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ VITE_BLYNK_API_URL=
 VITE_BLYNK_SERVER=
 VITE_BLYNK_ACCESS_TOKEN=
 VITE_BLYNK_TEMPLATE_ID=1
-VITE_BLYNK_LOG_EVENT_TOKEN=
 
 # Story Protocol Configuration (from Web3Providers.tsx)
 VITE_STORY_CLIENT_ID=
 VITE_STORY_PROJECT_ID=
+VITE_PINATA_JWT=
